Añadido icono al system tray para salir y botón cerrar en ventana de ayuda. Añadido cursor para modo anotación. Se comprueba si la app está ya abierta al inicio.